# YourCounter

./: AmountCell.qml  CMakeLists.txt  README.md  SButton.qml  main.cpp  main.qml  qml.qrc  timelinetablemodel.cpp  timelinetablemodel.h
src/: CMakeLists.txt  main.cpp  timelinetablemodel.cpp  timelinetablemodel.h
src/app/: Theme.cpp  main.cpp  qml.qrc
src/app/presenters/: addtransactionbuttonpresenter.cpp  addtransactionbuttonpresenter.h  timelinetablemodel.cpp  timescalebuttonpresenter.cpp  transactionlistmodel.cpp
src/app/qml/: AddTransactionPopup.qml  AddTransactionView.qml  NamedField.qml  main.qml
src/app/repos/: itransactionprovider.cpp  settingsrepositoryimpl.cpp  transactionjsonmapper.cpp  transactionjsonmapper.h  transactionproviderfromfile.cpp  transactionrepo.cpp  transactionrepo.h
src/domain/: CMakeLists.txt  WalletBallanceProviderImpl.cpp  WalletBallanceProviderImpl.h
src/domain/entities/: Category.h  CategoryRequest.h  Group.h  GroupRequest.h  Prediction.h  Transaction.h  TransactionRequest.h  Wallet.h  WalletId.h  interval.h  transaction.h
src/domain/entities/test/: test_Interval.cpp  test_Prediction.cpp
src/domain/repos/: IAuthService.h  ICRUDRepo.cpp  ICRUDRepo.h  ICredentionalStore.h  IEntityRepo.h  INetworkSettingsRepo.h  IPredictionRepo.h  ISettingsRepo.h  IWalletBallanceProvider.cpp  IWalletBallanceProvider.h  idatecolumnadapter.h  isettingsrepository.cpp  isettingsrepository.h  itransactionrepo.h
src/domain/test/: test_SmsParser.cpp
src/domain/usecases/: AddNewCategoryUsecase.cpp  AddNewCategoryUsecase.h  AddNewGroupUsecase.cpp  AddNewGroupUsecase.h  AddNewTransactionUsecase.cpp  AddNewTransactionUsecase.h  CalcPredictionSumInInterval.cpp  CalcPredictionSumInInterval.h  CurrentBalanceCalculateUsecase.cpp  CurrentBalanceCalculateUsecase.h  EditTransactionUsecase.cpp  EditTransactionUsecase.h  MonthReportUsecase.cpp  MonthReportUsecase.h  SmsParserUsecase.cpp  SmsParserUsecase.h  StartUpUsecase.cpp  StartUpUsecase.h  TransferUsecase.cpp  TransferUsecase.h  addnewtransactionusecase.cpp  addnewtransactionusecase.h  startupusecase.cpp  startupusecase.h
src/domain/usecases/smsParser/: SmsParser.cpp  SmsParser.h
src/domain/usecases/wallets/: AddNewWalletUsecase.cpp  AddNewWalletUsecase.h  CalcWalletBallanceUsecase.cpp  CalcWalletBallanceUsecase.h
src/presenters/: timescalebuttonpresenter.cpp
src/qml/: main.qml
src/qml/Controls/: qmldir
src/qmlapp/: CMakeLists.txt  Theme.h  YourCounter_prg_001.ts  main.cpp  qml.qrc
src/qmlapp/presenters/: AddCategoryPresenter.cpp  AddCategoryPresenter.h  AddGroupPresenter.cpp  AddGroupPresenter.h  AddTransactionButtonPresenter.cpp  AddTransactionButtonPresenter.h  AddTransactionPresenter.cpp  AddTransactionPresenter.h  CategoryListModel.cpp  CategoryListModel.h  CurentBalancePresenter.cpp  CurentBalancePresenter.h  EditTransactionPresenter.cpp  EditTransactionPresenter.h  MonthReportModel.cpp  MonthReportModel.h  StartUpScreenPresenter.cpp  StartUpScreenPresenter.h  TransactionListModel.cpp  TransactionListModel.h  addtransactionbuttonpresenter.cpp  addtransactionbuttonpresenter.h  timelinetablemodel.cpp  timelinetablemodel.h  timescalebuttonpresenter.h  transactionlistmodel.cpp  transactionlistmodel.h
src/qmlapp/presenters/wallets/: AddNewWalletPresenter.cpp  AddNewWalletPresenter.h  NewTransferPresenter.cpp  NewTransferPresenter.h  WalletEditVm.cpp  WalletEditVm.h  (+2 more)
src/qmlapp/qml/: AddNewCategoryPopup.qml  AddNewCategoryView.qml  AddNewGroupPopup.qml  AddNewGroupView.qml  AddTransactionPopup.qml  AddTransactionView.qml  AddTransferPopup.qml  AddWalletView.qml  CategoryList.qml  CategorySuggester.qml  CurrentMonthSummary.qml  DatePicker.qml  EditTransactionPopup.qml  EditTransactionView.qml  GroupCategoryDelegate.qml  GroupCategoryList.qml  NamedField.qml  NavigationBar.qml  StartUpScreen.qml  TransactionEditView.qml  TransactionList.qml  TransactionScreen.qml  WalletHorisontalList.qml  main.qml
src/qmlapp/qmlinjector/: iqmlobjectcreator.cpp  iqmlobjectcreator.h  qmlinjector.cpp  qmlinjector.h  qmlinjectorbuilder.h
src/qmlapp/repos/: datecolumnadapter.cpp  datecolumnadapter.h  itransactionprovider.h  settingsrepositoryimpl.h  transactionproviderfromfile.cpp  transactionrepo.cpp  transactionrepo.h
src/qmlapp/viewmodel/: AmountVm.cpp  AmountVm.h  TransactionFeildsVm.cpp  TransactionFeildsVm.h
src/qmlinjector/: iqmlobjectcreator.cpp  iqmlobjectcreator.h  qmlinjector.cpp  qmlinjectorbuilder.h
src/repos/: datecolumnadapter.cpp  datecolumnadapter.h  idatecolumnadapter.h  itransactionprovider.h  itransactionrepo.h  transactionjsonmapper.h  transactionproviderfromfile.cpp  transactionproviderfromfile.h  transactionrepo.cpp  transactionrepo.h
src/settings/: CMakeLists.txt  CredentialStoreImpl.cpp  CredentialStoreImpl.h  SettingsImpl.cpp  SettingsImpl.h  simplecrypt.cpp  simplecrypt.h
src/settings/test/: test_simplecrypt.cpp
src/storage/: AuthServiceImpl.cpp  AuthServiceImpl.h  CMakeLists.txt  CrudRepoImpl.h  EntityRepoImpl.cpp  EntityRepoImpl.h  IFirebaseRtDbApi.h  LocalFileDbApi.cpp  LocalFileDbApi.h  PredictionRepoimpl.cpp  PredictionRepoimpl.h  firebaseRtDbAPI.cpp  firebaseRtDbAPI.h  itransactionprovider.h  transactionjsonmapper.cpp  transactionjsonmapper.h  transactionrepo.cpp  transactionrepo.h
src/storage/jsonMappers/: CategoryMapper.cpp  CategoryMapper.h  GroupMappers.cpp  GroupMappers.h  IJsonMapper.h  PredictionMapper.cpp  PredictionMapper.h  TransactionMapper.cpp  TransactionMapper.h  WalletMapper.cpp  WalletMapper.h  categoryMappers.cpp  categoryMappers.h  groupMappers.cpp  groupMappers.h  transactionjsonmapper.cpp  transactionjsonmapper.h
src/storage/test/: test_CategoryMapper.cpp  test_CrudRepo.cpp  test_GroupMapper.cpp  test_PredictionMapper.cpp  test_TransactionMapper.cpp  test_categoryjsonmappers.cpp  test_groupjsonmappers.cpp  test_transactionjsonmapper.cpp  test_transactionrepo.cpp
test/: AutoTest.h  CMakeLists.txt  test_Interval.cpp  test_addtransactionusecase.cpp  test_datecolumnadapter.cpp  test_main.cpp  test_transactionrepo.cpp
test/testdata/: transactions.json
(+15 files in other folders)
